# email-risk-assessment

./: .env.example  .gitignore  LICENSE  Makefile  README.md  VALIDATION_PLAN.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py  script.py.mako
scripts/: manual_test.py
services/audit/: Dockerfile  formatter.py  main.py
services/extractor/: Dockerfile  behavioral.py  context.py  main.py  normalizer.py  reputation.py  signature.py
services/ingest/: Dockerfile  main.py
services/policy/: Dockerfile  main.py  rules.py
services/scoring/: Dockerfile  engine.py  main.py
shared/: __init__.py  config.py  db.py  logging.py  models.py  mq.py  schemas.py
tests/: conftest.py  test_audit.py  test_extractor.py  test_policy.py  test_scoring.py
yara_rules/: default.yar
