[project]
name = "email-risk-assessment"
version = "0.1.0"
description = "Hybrid method for integral risk assessment of email attachments"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "aiokafka>=0.11",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "redis[hiredis]>=5.0",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "yara-python>=4.5",
    "python-magic>=0.4",
    "tenacity>=8.3",
    "pybreaker>=1.2",
    "structlog>=24.1",
    "slowapi>=0.1",
    "httpx>=0.27",
    "prometheus-fastapi-instrumentator>=7.0",
    "python-multipart>=0.0.9",
    "alembic>=1.13",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "httpx>=0.27",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["shared*", "services*"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]
